--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               <li><a href="html/location.html">Location</a></li>
               <li><a href="html/souscription.html">souscription</a></li>
               <li><a href="html/histoire.html">histoire</a></li>
+              <h1>test</h1>
             </div>
           </div>
         </div>
