--- a/index.html
+++ b/index.html
@@ -8,30 +8,9 @@
 </head>
 
 <header>
-
-    <nav>
-        <div class="navbar">
-          <div class="container nav-container">
-              <input class="checkbox" type="checkbox" name="" id="" />
-              <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-              </div>  
-            <div class="logo">
-              <h1>IconicMotors</h1>
-            </div>
-            <div class="menu-items">
-              <li><a href="index.html">Accueil</a></li>
-              <li><a href="html/leasing.html">Leasing</a></li>
-              <li><a href="html/location.html">Location</a></li>
-              <li><a href="html/souscription.html">souscription</a></li>
-              <li><a href="html/histoire.html">histoire</a></li>
-              
-            </div>
-          </div>
-        </div>
-      </nav>
+  <h1>menu</h1>
+  <h1>IconicMotors</h1>
+  
 
 </header>
 <body>
