--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>IconicMotors</title>
-    <link rel="shortcut icon" href="image/IConiMotors (2).png">
+    <link rel="icon" href="image/IConiMotors (2).png">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
 <header>
   <h1>menu</h1>
   <h1>IconicMotors</h1>
-  
+  <img src="image/logo connexion.png" alt="connexion">
 
 </header>
 <body>
