--- a/html/histoire.html
+++ b/html/histoire.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>IconicsMotors</title>
+    <meta name ="author" content="N'DIAYE">
+
+    <link rel="IconicsMotors" type="image/x-icon" href="image/IconicsMotors.png">
+
 </head>
 <body>
-    <H1>birames</H1>
+
+
+    
+    <H1>birame</H1>
 </body>
+
+
+
+
 </html>
+
