changement head dzq

--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
 </head>
 
 <header>
-  <h1>menu</h1>
-  <h1>IconicMotors</h1>
-  <img src="image/logo connexion.png" alt="connexion">
+  <div>
+    <h1>menu</h1>
+    <h1>IconicMotors</h1>
+    <img src="image/logo connexion.png" alt="connexion">
+  </div>
+
+
+  
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/0Og-PI947ao?si=jp-ocQPGvkwlXTOQ&autoplay=1&playlist=0Og-PI947ao" ></iframe>
+
+
+
+
+  <img src="image/Projet Supprimer un arrière-plan.png" alt="Voiture principale header">
 
 </header>
 <body>
