--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <title>IconicMotors</title>
-    <link rel="icon" href="image/IConiMotors (2).png">
-    <link rel="stylesheet" href="style/style.css">
+  <meta charset="UTF-8">
+  <title>IconicMotors</title>
+  <link rel="icon" href="image/IConiMotors (2).png">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <header>
@@ -15,39 +16,32 @@
   </div>
 
 
-  
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/0Og-PI947ao?si=jp-ocQPGvkwlXTOQ&autoplay=1&playlist=0Og-PI947ao" ></iframe>
-
 
 
 
   <img src="image/Projet Supprimer un arrière-plan.png" alt="Voiture principale header">
 
-  <h1>menu</h1>
-  <h1>IconicMotors</h1>
-  <img src="image/logo connexion.png" alt="connexion">
-    <h1>moahemed</h1>
-    <h1>zdzd</h1>
-    <h1>efef</h1>
 
 </header>
+
 <body>
-    
-    <h2> TOP </h2>
 
-    <h2> SUPERCAR </h2>
+  <h2> TOP </h2>
 
-    <h2> 4X4 </h2>
+  <h2> SUPERCAR </h2>
 
-    <h1> Notre histoire </h1>
+  <h2> 4X4 </h2>
+
+  <h1> Notre histoire </h1>
 
 </body>
 
 <footer>
 
-    <h1>information complémentaire</h1>
+  <h1>information complémentaire</h1>
 
-    <h3><a href="html/contact.html"></a> CONTACT </h3>
+  <h3><a href="html/contact.html"></a> CONTACT </h3>
+  <a href="html/souscription.html">souscription</a>
 
 
 </footer>
