--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 
 <header>
   <div>
+    <img src="image/barre-de-navigation.png" alt="burger menu">
     <h1>menu</h1>
     <h1>IconicMotors</h1>
-    <img src="image/logo connexion.png" alt="connexion">
+    <a href="html/connexion.html"><img src="image/logo connexion.png" alt="connexion"></a>
   </div>
 
 
 
 
 
-  <img src="image/Projet Supprimer un arrière-plan.png" alt="Voiture principale header">
+  <img  src="image/Projet Supprimer un arrière-plan.png" alt="Voiture principale header">
 
 
 </header>
