--- a/index.html
+++ b/index.html
@@ -8,24 +8,31 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 
-<header>
-  <div>
-    <img src="image/barre-de-navigation.png" alt="burger menu">
-    <h1>menu</h1>
-    <h1>IconicMotors</h1>
-    <a href="html/connexion.html"><img src="image/logo connexion.png" alt="connexion"></a>
-  </div>
-
-
-
-
-
-  <img src="image/Projet Supprimer un arrière-plan.png" alt="Voiture principale header">
-
-
-</header>
 
 <body>
+  <header>
+    <div>
+      <div id="menu">
+        <img src="image/barre-de-navigation.png" alt="burger menu">
+        <h1>menu</h1>
+      </div>
+
+      <div class="transition1">
+        <h1 class="initial">IM</h1>
+        <h1 class="final">IconicMotors</h1>
+      </div>
+      <a href="html/connexion.html"><img src="image/logo connexion.png" alt="connexion"></a>
+    </div>
+
+
+
+
+
+    <img id="voiture1" src="image/Projet Supprimer un arrière-plan.png" alt="Voiture principale header">
+
+
+  </header>
+
 
   <h2> TOP </h2>
 
