--- a/html/connexion.html
+++ b/html/connexion.html
@@ -18,7 +18,7 @@
                 <input type="password" id="password" name="password" required>
                 
                 <button type="submit">Se connecter</button>
-                <button type="button" onclick="window.location.href='../index.html'">Page principale</button>
+                <button type="button" onclick="window.location.href='../index.html'" id="page-principal">Page principale</button>
             </form>
         </div>
     </div>
