mise en place index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <div>
+    <div class="navigation">
       <div id="menu">
         <img src="image/barre-de-navigation.png" alt="burger menu">
         <h1>menu</h1>
@@ -33,14 +33,24 @@
 
   </header>
 
+  <div class="top">
+    <h2> TOP </h2>
+  </div>
 
-  <h2> TOP </h2>
+  <div class="supercar">
+    <h2> SUPERCAR </h2>
+  </div>
 
-  <h2> SUPERCAR </h2>
 
-  <h2> 4X4 </h2>
+  <div class="4x4">
+    <h2> 4X4 </h2>
+  </div>
 
-  <h1> Notre histoire </h1>
+
+  <div class="histoire">
+    <h1> Notre histoire </h1>
+  </div>
+
 
 </body>
 
@@ -48,7 +58,7 @@
 
   <h1>information complémentaire</h1>
 
-  <h3><a href="html/contact.html"></a> CONTACT </h3>
+  <a href="html/contact.html"> <h3>CONTACT</h3></a>
   <a href="html/souscription.html">souscription</a>
 
 
