--- a/index.html
+++ b/index.html
@@ -4,67 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <title>IconicMotors</title>
-  <link rel="icon" href="image/IConiMotors (2).png">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="icon" href="image/IConiMotors (2).png">
 </head>
 
+<header>
+  <h1>IconicMotors</h1>
 
+  
+
+  <nav>
+    <ul>
+      <li><a href="html/leasing.html">leasing</a></li>
+      <li><a href="html/location.html">location</a></li>
+      <li><a href="html/histoire.html">histoire</a></li>
+      <li><a href="html/connexion.html">connexion</a></li>
+    </ul>
+  </nav>
+</header>
 <body>
-  <header>
-    <div class="navigation">
-      <div id="menu">
-        <img src="image/barre-de-navigation.png" alt="burger menu">
-        <h1>menu</h1>
-      </div>
-
-      <div class="transition1">
-        <h1 class="initial">IM</h1>
-        <h1 class="final">IconicMotors</h1>
-      </div>
-      <a href="html/connexion.html"><img src="image/logo connexion.png" alt="connexion"></a>
-    </div>
-
-
-
-
-
-    <img id="voiture1" src="image/Projet Supprimer un arrière-plan.png" alt="Voiture principale header">
-
-
-  </header>
-
-  <div class="top">
-    <h2> TOP </h2>
-  </div>
-
-  <div class="supercar">
-    <h2> SUPERCAR </h2>
-  </div>
-
-
-  <div class="4x4">
-    <h2> 4X4 </h2>
-  </div>
-
-
-  <div class="histoire">
-    <h1> Notre histoire </h1>
-  </div>
-
+  <h2>Top</h2>
+  <h2>Supercar</h2>
+  <h2>4x4</h2>
 
 </body>
-
-<footer>
-
-  <h1>information complémentaire</h1>
-
-  <a href="html/contact.html"> <h3>CONTACT</h3></a>
-  <a href="html/souscription.html">souscription</a>
-
-
-</footer>
-
-
-
 
 </html>
