--- a/html/location.html
+++ b/html/location.html
@@ -65,6 +65,6 @@
                     <p>Prix: 450€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="citadine3.jpg" alt="Citadine 3"
+                    <img src="citadine3.jpg" alt="Citadine 3">
                     <h3>Audi RS6</h3>
                     <p>Prix: 450€/mois</p>
