--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <header>
-  <h1>IconicMotors</h1>
+  <h1 class="logo-text">IconicMotors</h1>
+  <img class="logo-image" src="image/IConiMotors (2).png" alt="Logo IconicMotors Mobile">
+
 
   
 
@@ -26,7 +28,7 @@
   <h2>Top</h2>
   <h2>Supercar</h2>
   <h2>4x4</h2>
-
+<h3>test</h3>
 
 </body>
 
