--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 
 <header>
-  <h1 class="logo-text">IconicMotors</h1>
-  <img class="logo-image" src="image/IConiMotors (2).png" alt="Logo IconicMotors Mobile">
+
+  <div class="menu">
+    <a href="index.html">
+    <img class="logo-image" src="image/IIM.png" alt="Logo IconicMotors Mobile">
+    <h1 class="logo-text">IconicMotors</h1>
+  </a>
+  </div>
 
 
 
-
-  <nav>
+  <nav> 
     <ul>
       <li><a href="html/leasing.html">leasing</a></li>
       <li><a href="html/location.html">location</a></li>
@@ -26,10 +30,12 @@
 </header>
 
 <body>
+
+  <img src="image/40C6ABF917A34AE0B94C7726C3D0DBC7_D8B4E405A2B04A689EB923F8281A5993_panamera-gts-side.avif" alt="">
   <h2>Top</h2>
   <h2>Supercar</h2>
   <h2>4x4</h2>
-  <h2>ca marche pas</h2>
+
 
 
 
