--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 
 <header>
 
+
   <div class="menu">
     <a href="index.html">
-    <img class="logo-image" src="image/IIM.png" alt="Logo IconicMotors Mobile">
-    <h1 class="logo-text">IconicMotors</h1>
-  </a>
+      <img class="logo-image" src="image/IIM.png" alt="Logo IconicMotors Mobile">
+      <h1 class="logo-text">IconicMotors</h1>
+    </a>
   </div>
 
 
 
-  <nav> 
+  <nav>
     <ul>
       <li><a href="html/leasing.html">leasing</a></li>
       <li><a href="html/location.html">location</a></li>
@@ -31,7 +32,13 @@
 
 <body>
 
-  <img src="image/40C6ABF917A34AE0B94C7726C3D0DBC7_D8B4E405A2B04A689EB923F8281A5993_panamera-gts-side.avif" alt="">
+  <div class="bloc">
+    <video autoplay="autoplay" loop src="image/Direction Future - Panamera Sport Turismo.mp4"></video>
+    <img class="overlay-image" src="image/40C6ABF917A34AE0B94C7726C3D0DBC7_D8B4E405A2B04A689EB923F8281A5993_panamera-gts-side.avif" alt="Porsche Panamera">
+  </div>
+  
+
+
   <h2>Top</h2>
   <h2>Supercar</h2>
   <h2>4x4</h2>
