--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
   <div class="bloc">
-    <video autoplay="autoplay" loop src="image/Direction Future - Panamera Sport Turismo.mp4"></video>
+    <video autoplay="autoplay" loop="" src="image/Direction Future - Panamera Sport Turismo.mp4"></video>
   </div>
   
 
