--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 <body>
 
   <div class="bloc">
-    <video autoplay="autoplay" loop="" src="image/Direction Future - Panamera Sport Turismo.mp4"></video>
+    <video autoplay loop muted playsinline>
+      <source src="image/Direction Future - Panamera Sport Turismo.mp4" type="video/mp4">
+      Votre navigateur ne supporte pas les vidéos HTML5.
+    </video>
   </div>
+  
   
 
 
