--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>IconicMotors</title>
   <link rel="stylesheet" href="style/style.css">
   <link rel="icon" href="image/IConiMotors (2).png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <header>
