--- a/html/location.html
+++ b/html/location.html
@@ -15,7 +15,7 @@
 
         <div class="menu">
           <a href="index.html">
-            <img class="logo-image" src="image/IIM.png" alt="Logo IconicMotors Mobile">
+            <img class="logo-image" src="../image/IIM.png" alt="Logo IconicMotors Mobile">
             <h1 class="logo-text">IconicMotors</h1>
           </a>
         </div>
