--- a/html/location.html
+++ b/html/location.html
@@ -15,7 +15,7 @@
 
 
         <div class="menu">
-          <a href="index.html">
+          <a href="../index.html">
             <img class="logo-image" src="../image/IIM.png" alt="Logo IconicMotors Mobile">
             <h1 class="logo-text">IconicMotors</h1>
           </a>
@@ -25,10 +25,10 @@
       
         <nav>
           <ul>
-            <li><a href="html/leasing.html">leasing</a></li>
-            <li><a href="html/location.html">location</a></li>
-            <li><a href="html/histoire.html">histoire</a></li>
-            <li><a href="html/connexion.html">connexion</a></li>
+            <li><a href="../html/leasing.html">leasing</a></li>
+            <li><a href="../html/location.html">location</a></li>
+            <li><a href="../html/histoire.html">histoire</a></li>
+            <li><a href="../html/connexion.html">connexion</a></li>
           </ul>
         </nav>
       </header>
