--- a/html/histoire.html
+++ b/html/histoire.html
@@ -2,21 +2,48 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IconicsMotors</title>
     <meta name ="author" content="N'DIAYE">
-
-    <link rel="IconicsMotors" type="image/x-icon" href="image/IconicsMotors.png">
-
+    <link rel="stylesheet" href="../style/histoire.css">
 </head>
 <body>
-
-
-    
-    <H1>birame</H1>
+    <header class="header">
+        <h1>L'Histoire d'une Entreprise</h1>
+    </header>
+    <section class="intro">
+        <p>
+            Tout a commencé avec une idée audacieuse, imaginée par quatre jeunes visionnaires. Leur mission : révolutionner le monde de la location automobile.
+        </p>
+    </section>
+    <section class="timeline">
+        <div class="timeline-item">
+            <h2>Le Commencement</h2>
+            <p>
+                En 2010, dans un petit garage, ces quatre amis passionnés par l'automobile ont décidé de lancer leur propre entreprise. Ils voulaient rendre la location de voitures plus accessible, flexible et moderne.
+            </p>
+        </div>
+        <div class="timeline-item">
+            <h2>La Première Voiture</h2>
+            <p>
+                Leur première voiture, une berline d'occasion, était louée à des prix défiant toute concurrence. Ce fut le début d'une success story.
+            </p>
+        </div>
+        <div class="timeline-item">
+            <h2>Une Croissance Rapide</h2>
+            <p>
+                Grâce à leur détermination et à leur innovation, l'entreprise a rapidement attiré des investisseurs. Leur flotte s'est agrandie et leur réputation a traversé les frontières.
+            </p>
+        </div>
+        <div class="timeline-item">
+            <h2>Un Géant Côté en Bourse</h2>
+            <p>
+                Aujourd'hui, l'entreprise est un leader mondial, offrant des services de location de luxe avec des véhicules haut de gamme. Elle est cotée en bourse et continue d'innover.
+            </p>
+        </div>
+    </section>
+    <footer class="footer">
+        <p>© 2024 - Une entreprise inspirante.</p>
+    </footer>
 </body>
-
-
-
-
 </html>
-
