--- a/html/histoire.html
+++ b/html/histoire.html
@@ -3,14 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IconicsMotors</title>
+    <title>IconicsMotors - Histoire</title>
     <meta name ="author" content="N'DIAYE">
     <link rel="stylesheet" href="../style/histoire.css">
+    <link rel="icon" href="../image/IConiMotors (2).png">
 </head>
+
+<header>
+
+
+    <div class="menu">
+      <a href="../index.html">
+        <img class="logo-image" src="../image/IIM.png" alt="Logo IconicMotors Mobile">
+        <h1 class="logo-text">IconicMotors</h1>
+      </a>
+    </div>
+  
+  
+  
+    <nav>
+      <ul>
+        <li><a href="../html/leasing.html">leasing</a></li>
+        <li><a href="../html/location.html">location</a></li>
+        <li><a href="../html/histoire.html">histoire</a></li>
+        <li><a href="../html/connexion.html">connexion</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
 <body>
-    <header class="header">
+    <div class="headder">
         <h1>L'Histoire d'une Entreprise</h1>
-    </header>
+    </div>
     <section class="intro">
         <p>
             Tout a commencé avec une idée audacieuse, imaginée par quatre jeunes visionnaires. Leur mission : révolutionner le monde de la location automobile.
