--- a/html/souscription.html
+++ b/html/souscription.html
@@ -3,10 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page de Souscription</title>
+    <title>IconicMotors - Souscription</title>
     <link rel="stylesheet" href="../style/souscription.css">
+    <link rel="icon" href="../image/IConiMotors (2).png">
 </head>
+
+<header>
+
+
+    <div class="menu">
+      <a href="../index.html">
+        <img class="logo-image" src="../image/IIM.png" alt="Logo IconicMotors Mobile">
+        <h1 class="logo-text">IconicMotors</h1>
+      </a>
+    </div>
+  
+  
+  
+    <nav>
+      <ul>
+        <li><a href="../html/leasing.html">leasing</a></li>
+        <li><a href="../html/location.html">location</a></li>
+        <li><a href="../html/histoire.html">histoire</a></li>
+        <li><a href="../html/connexion.html">connexion</a></li>
+      </ul>
+    </nav>
+  </header>
+
 <body>
+
+
+
+    
     <div class="container">
         <!-- Abonnement Location -->
         <div class="card">
