ajout header correctif body

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   
 
-  <a href="html/souscription.html"></a>
+  <a href="html/souscription.html">souscription</a>
   <h2>Top</h2>
   <h2>Supercar</h2>
   <h2>4x4</h2>
