--- a/html/location.html
+++ b/html/location.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogue de Voitures en Leasing</title>
     <link rel="stylesheet" href="../style/location.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            background-image: url('../image/porcshe fond.png'); /* Remplace par le chemin de ton image */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    </style>   
 </head>
 <body>
     <header class="header">
         <h1>Catalogue de Voitures en Location</h1>
     </header>
-    <main class="catalogue">
-        <back
+    <main class="catalogue">  
         <section>
             <h2>Sportive</h2>
             <div class="cars">
@@ -67,10 +77,6 @@
                     <p>Prix: 450€/mois</p>
                 </div>
                 <div class="car">
-<<<<<<< HEAD
                     <img src="../image/rs6 gamme gris nardo.png" alt="Citadine 3">
-=======
-                    <img src="citadine3.jpg" alt="Citadine 3">
->>>>>>> 0ae2c0905343e7b994065ff15b22e5008989ed31
                     <h3>Audi RS6</h3>
                     <p>Prix: 450€/mois</p>
