--- a/html/connexion.html
+++ b/html/connexion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion - IconicMotors</title>
     <link rel="stylesheet" href="../style/connexion.css">
-    <link rel="icon" href="../image/IConiMotors (2).png">
+    <link rel="icon" href="../image/IConiMotors.png">
 </head>
 <body>
     <div class="container">
