--- a/html/contact.html
+++ b/html/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>IconicsMotors</title>
     <meta name ="author" content="N'DIAYE">
+    <link rel="icon" href="../image/IConiMotors.png">
 
     <link rel="shortcut icon" href="image/IConiMotors (2).png">
 </head>
