--- a/html/location.html
+++ b/html/location.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IconicMotors - Location</title>
     <link rel="stylesheet" href="../style/location.css">
-<<<<<<< HEAD
+    <link rel="icon" href="../image/IConiMotors.png">
+
     <style>
         body {
             margin: 0;
@@ -17,7 +18,6 @@
             background-repeat: no-repeat;
         }
     </style>   
-    <link rel="icon" href="../image/IConiMotors (2).png">
 </head>
 
 
