--- a/index.html
+++ b/index.html
@@ -5,38 +5,40 @@
   <meta charset="UTF-8">
   <title>IconicMotors</title>
   <link rel="stylesheet" href="style/style.css">
-  <link rel="icon" href="image/IConiMotors (2).png">
+  <link rel="icon" href="image/IConiMotors.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
-<header>
 
-
-  <div class="menu">
-    <a href="index.html">
-      <img class="logo-image" src="image/IIM.png" alt="Logo IconicMotors Mobile">
-      <h1 class="logo-text">IconicMotors</h1>
-    </a>
-  </div>
-
-
-
-  <nav>
-    <ul>
-      <li><a href="html/leasing.html">leasing</a></li>
-      <li><a href="html/location.html">location</a></li>
-      <li><a href="html/histoire.html">histoire</a></li>
-      <li><a href="html/connexion.html">connexion</a></li>
-    </ul>
-  </nav>
-</header>
 
 <body>
 
+  <header>
+
+
+    <div class="menu">
+      <a href="index.html">
+        <img class="logo-image" src="image/IIM.png" alt="Logo IconicMotors Mobile">
+        <h1 class="logo-text">IconicMotors</h1>
+      </a>
+    </div>
+  
+  
+  
+    <nav>
+      <ul>
+        <li><a href="html/leasing.html">leasing</a></li>
+        <li><a href="html/location.html">location</a></li>
+        <li><a href="html/histoire.html">histoire</a></li>
+        <li><a href="html/connexion.html">connexion</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <div class="bloc">
     <video autoplay loop muted playsinline>
-      <source src="image/Direction Future - Panamera Sport Turismo.mp4" type="video/mp4">
+      <source src="image/Direction%20Future%20-%20Panamera%20Sport%20Turismo.mp4" type="video/mp4">
       Votre navigateur ne supporte pas les vidéos HTML5.
     </video>
   </div>
@@ -49,6 +51,32 @@
   <h2>4x4</h2>
 
 
+  <footer>
+    <div class="footer-content">
+      <div class="footer-logo">
+        <img src="image/IIM.png" alt="Logo IconicMotors" class="footer-logo-image">
+        <p>IconicMotors</p>
+      </div>
+      <div class="footer-links">
+        <ul>
+          <li><a href="html/leasing.html">Leasing</a></li>
+          <li><a href="html/location.html">Location</a></li>
+          <li><a href="html/histoire.html">Histoire</a></li>
+          <li><a href="html/connexion.html">Connexion</a></li>
+        </ul>
+      </div>
+      <div class="footer-contact">
+        <p>Contactez-nous :</p>
+        <p>Email : <a href="IconicMotors@IM.fr">contact@iconicmotors.com</a></p>
+        <p>Téléphone : <a href="tel:+33123456789">+33 1 23 45 67 89</a></p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2024 IconicMotors. Tous droits réservés.</p>
+      <p><a href="html/mentions-legales.html">Mentions légales</a> | <a href="html/politique-confidentialite.html">Politique de confidentialité</a></p>
+    </div>
+  </footer>
+  
 
 </body>
 
