--- a/html/histoire.html
+++ b/html/histoire.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IconicsMotors - Histoire</title>
-    <meta name ="author" content="N'DIAYE">
-    <link rel="stylesheet" href="../style/histoire.css">
-    <link rel="icon" href="../image/IConiMotors.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IconicsMotors - Histoire</title>
+  <meta name="author" content="N'DIAYE">
+  <link rel="stylesheet" href="../style/histoire.css">
+  <link rel="icon" href="../image/IConiMotors.png">
 </head>
 
-<header>
+
+
+
+<body>
+  <header>
 
 
     <div class="menu">
@@ -18,9 +23,9 @@
         <h1 class="logo-text">IconicMotors</h1>
       </a>
     </div>
-  
-  
-  
+
+
+
     <nav>
       <ul>
         <li><a href="../html/leasing.html">leasing</a></li>
@@ -31,66 +36,68 @@
     </nav>
   </header>
 
-
-<body>
-    <div class="headder">
-        <h1>L'Histoire d'une Entreprise</h1>
+  <section class="intro">
+    <p>
+      Tout a commencé avec une idée audacieuse, imaginée par quatre jeunes visionnaires. Leur mission : révolutionner le
+      monde de la location automobile.
+    </p>
+  </section>
+  <section class="timeline">
+    <div class="timeline-item">
+      <h2>Le Commencement</h2>
+      <p>
+        En 2010, dans un petit garage, ces quatre amis passionnés par l'automobile ont décidé de lancer leur propre
+        entreprise. Ils voulaient rendre la location de voitures plus accessible, flexible et moderne.
+      </p>
     </div>
-    <section class="intro">
-        <p>
-            Tout a commencé avec une idée audacieuse, imaginée par quatre jeunes visionnaires. Leur mission : révolutionner le monde de la location automobile.
-        </p>
-    </section>
-    <section class="timeline">
-        <div class="timeline-item">
-            <h2>Le Commencement</h2>
-            <p>
-                En 2010, dans un petit garage, ces quatre amis passionnés par l'automobile ont décidé de lancer leur propre entreprise. Ils voulaient rendre la location de voitures plus accessible, flexible et moderne.
-            </p>
-        </div>
-        <div class="timeline-item">
-            <h2>La Première Voiture</h2>
-            <p>
-                Leur première voiture, une berline d'occasion, était louée à des prix défiant toute concurrence. Ce fut le début d'une success story.
-            </p>
-        </div>
-        <div class="timeline-item">
-            <h2>Une Croissance Rapide</h2>
-            <p>
-                Grâce à leur détermination et à leur innovation, l'entreprise a rapidement attiré des investisseurs. Leur flotte s'est agrandie et leur réputation a traversé les frontières.
-            </p>
-        </div>
-        <div class="timeline-item">
-            <h2>Un Géant Côté en Bourse</h2>
-            <p>
-                Aujourd'hui, l'entreprise est un leader mondial, offrant des services de location de luxe avec des véhicules haut de gamme. Elle est cotée en bourse et continue d'innover.
-            </p>
-        </div>
-    </section>
-    <footer>
-        <div class="footer-content">
-          <div class="footer-logo">
-            <img src="../image/IIM.png" alt="Logo IconicMotors" class="footer-logo-image">
-            <p>IconicMotors</p>
-          </div>
-          <div class="footer-links">
-            <ul>
-              <li><a href="../html/leasing.html">Leasing</a></li>
-              <li><a href="../html/location.html">Location</a></li>
-              <li><a href="../html/histoire.html">Histoire</a></li>
-              <li><a href="../html/connexion.html">Connexion</a></li>
-            </ul>
-          </div>
-          <div class="footer-contact">
-            <p>Contactez-nous :</p>
-            <p>Email : <a href="IconicMotors@IM.fr">contact@iconicmotors.com</a></p>
-            <p>Téléphone : <a href="tel:+33123456789">+33 1 23 45 67 89</a></p>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <p>&copy; 2024 IconicMotors. Tous droits réservés.</p>
-          <p><a href="html/mentions-legales.html">Mentions légales</a> | <a href="html/politique-confidentialite.html">Politique de confidentialité</a></p>
-        </div>
-      </footer>
+    <div class="timeline-item">
+      <h2>La Première Voiture</h2>
+      <p>
+        Leur première voiture, une berline d'occasion, était louée à des prix défiant toute concurrence. Ce fut le début
+        d'une success story.
+      </p>
+    </div>
+    <div class="timeline-item">
+      <h2>Une Croissance Rapide</h2>
+      <p>
+        Grâce à leur détermination et à leur innovation, l'entreprise a rapidement attiré des investisseurs. Leur flotte
+        s'est agrandie et leur réputation a traversé les frontières.
+      </p>
+    </div>
+    <div class="timeline-item">
+      <h2>Un Géant Côté en Bourse</h2>
+      <p>
+        Aujourd'hui, l'entreprise est un leader mondial, offrant des services de location de luxe avec des véhicules
+        haut de gamme. Elle est cotée en bourse et continue d'innover.
+      </p>
+    </div>
+  </section>
+  <footer>
+    <div class="footer-content">
+      <div class="footer-logo">
+        <img src="../image/IIM.png" alt="Logo IconicMotors" class="footer-logo-image">
+        <p>IconicMotors</p>
+      </div>
+      <div class="footer-links">
+        <ul>
+          <li><a href="../html/leasing.html">Leasing</a></li>
+          <li><a href="../html/location.html">Location</a></li>
+          <li><a href="../html/histoire.html">Histoire</a></li>
+          <li><a href="../html/connexion.html">Connexion</a></li>
+        </ul>
+      </div>
+      <div class="footer-contact">
+        <p>Contactez-nous :</p>
+        <p>Email : <a href="IconicMotors@IM.fr">contact@iconicmotors.com</a></p>
+        <p>Téléphone : <a href="tel:+33123456789">+33 1 23 45 67 89</a></p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2024 IconicMotors. Tous droits réservés.</p>
+      <p><a href="html/mentions-legales.html">Mentions légales</a> | <a
+          href="html/politique-confidentialite.html">Politique de confidentialité</a></p>
+    </div>
+  </footer>
 </body>
+
 </html>
