--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <h1 class="logo-text">IconicMotors</h1>
       </a>
     </div>
-  
-  
-  
+
+
+
     <nav>
       <ul>
         <li><a href="html/leasing.html">leasing</a></li>
@@ -42,15 +42,65 @@
       Votre navigateur ne supporte pas les vidéos HTML5.
     </video>
   </div>
-  
-  
 
-  <a href="html/souscription.html">souscription</a>
-  <h2>Top</h2>
-  <h2>Supercar</h2>
-  <h2>4x4</h2>
+  <div id="corps">
 
+    <a href="html/souscription.html">souscription</a>
+    <h2>Top</h2>
+    <div class="cars-container">
+      <div class="car-card">
+        <img src="image/porsche-992-carrera.avif" alt="Porsche 992 carrera">
+        <h3>Porsche 992 carrera</h3>
+      </div>
 
+      <div class="car-card">
+        <img src="image/porsche-GT3-RS.png" alt="porsche-GT3-RS">
+        <h3>porsche GT3 RS</h3>
+      </div>
+
+      <div class="car-card">
+        <img src="image/Porsche-718.png" alt="Porsche-718">
+        <h3>Porsche 718</h3>
+      </div>
+    </div>
+
+    <h2>Supercar</h2>
+    <div class="cars-container">
+      <div class="car-card">
+        <img src="image/porsche-992-carrera.avif" alt="Porsche 992 carrera">
+        <h3>Porsche 992 carrera</h3>
+      </div>
+
+      <div class="car-card">
+        <img src="image/porsche-GT3-RS.png" alt="porsche-GT3-RS">
+        <h3>porsche GT3 RS</h3>
+      </div>
+
+      <div class="car-card">
+        <img src="image/Porsche-718.png" alt="Porsche-718">
+        <h3>Porsche 718</h3>
+      </div>
+    </div>
+
+    <h2>4x4</h2>
+
+    <div class="cars-container">
+      <div class="car-card">
+        <img src="image/porsche-992-carrera.avif" alt="Porsche 992 carrera">
+        <h3>Porsche 992 carrera</h3>
+      </div>
+
+      <div class="car-card">
+        <img src="image/porsche-GT3-RS.png" alt="porsche-GT3-RS">
+        <h3>porsche GT3 RS</h3>
+      </div>
+
+      <div class="car-card">
+        <img src="image/Porsche-718.png" alt="Porsche-718">
+        <h3>Porsche 718</h3>
+      </div>
+    </div>
+  </div>
   <footer>
     <div class="footer-content">
       <div class="footer-logo">
@@ -73,10 +123,11 @@
     </div>
     <div class="footer-bottom">
       <p>&copy; 2024 IconicMotors. Tous droits réservés.</p>
-      <p><a href="html/mentions-legales.html">Mentions légales</a> | <a href="html/politique-confidentialite.html">Politique de confidentialité</a></p>
+      <p><a href="html/mentions-legales.html">Mentions légales</a> | <a
+          href="html/politique-confidentialite.html">Politique de confidentialité</a></p>
     </div>
   </footer>
-  
+
 
 </body>
 
