--- a/html/location.html
+++ b/html/location.html
@@ -5,21 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IconicMotors - Location</title>
     <link rel="stylesheet" href="../style/location.css">
-<<<<<<< HEAD
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background-image: url('../image/porcshe fond.png'); /* Remplace par le chemin de ton image */
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-    </style>   
-=======
     <link rel="icon" href="../image/IConiMotors (2).png">
->>>>>>> 7b209621bcdb78a0f9ec17c31dc7651290e98779
 </head>
 
 
@@ -48,70 +34,60 @@
       </header>
 
 
-    <header class="headder">
+    <div class="headder">
         <h1>Catalogue de Voitures en Location</h1>
-    </header>
+    </div>
     <main class="catalogue">  
         <section>
-            <h2>Sportive</h2>
+            <h2>Mercedes-benz</h2>
             <div class="cars">
                 <div class="car">
-                    <img src="../image/Audi r8 spyder v10.png" alt="Hypercar 1">
-                    <h3>Audi r8 spyder v10</h3>
+                    <img src="../image/aamerco g63.png" alt="Hypercar 1">
+                    <h3>Mercedes - G63 AMG</h3>
                     <p>Prix: 965€/mois</p>
                     <div class="description">Une voiture sportive, élégante et puissante.</div>
                 </div>
                 <div class="car">
-                    <img src="../image/Audi RS7.png" alt="Hypercar 2">
-                    <h3>Audi RS7</h3>
+                    <img src="../image/aamerco gt53.png" alt="Hypercar 2">
+                    <h3>Mercedes - GT53 AMG</h3>
                     <p>Prix: 8500€/mois</p>
                 </div>
             </div>
         </section>
         <section>
-            <h2>4X4</h2>
+            <h2>Porsche</h2>
             <div class="cars">
                 <div class="car">
-                    <img src="../image/Porsche Macan GTS.png" alt="Supercar 1">
-                    <h3>Porsche Macan GTS</h3>
+                    <img src="../image/aaporsche 718.png" alt="Supercar 1">
+                    <h3>porsche 718</h3>
                     <p>Prix: 3800€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="../image/Audi RSQ8.png" alt="Supercar 2">
-                    <h3>Audi RSQ8</h3>
+                    <img src="../image/aaporsche 992 carrera.png" alt="Supercar 2">
+                    <h3>porshce 992 carrera</h3>
                     <p>Prix: 4750€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="../image/Mercedes GLE 63 AMG S.png" alt="Supercar 3">
-                    <h3>Mercedes GLE 63 AMG S</h3>
+                    <img src="../image/aaporsche gt3 rs.png" alt="Supercar 3">
+                    <h3>porsche gt3 rs</h3>
                     <p>Prix: 5250€/mois</p>
-                </div>
-                <div class="car">
-                    <img src="../image/Audi SQ5.png" alt="Supercar 4">
-                    <h3>Audi SQ5</h3>
-                    <p>Prix: 4250€/mois</p>
                 </div>
             </div>
         </section>
         <section>
-            <h2>Gamme gris nardo</h2>
+            <h2>Lamborghini</h2>
             <div class="cars">
                 <div class="car">
-                    <img src="../image/golf 8r.png" alt="Citadine 1">
-                    <h3>Volkswagen Golf 8 R</h3>
+                    <img src="../image/aaavaentador.png" alt="Citadine 1">
+                    <h3>Lamborghini Aventador SVJ</h3>
                     <p>Prix: 400€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="../image/BMW M3 Competition.png" alt="Citadine 2">
-                    <h3>BMW M3 Competition</h3>
+                    <img src="../image/aatecnica.png" alt="Citadine 2">
+                    <h3>Lamborghini Tecnica</h3>
                     <p>Prix: 450€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="../image/rs6 gamme gris nardo.png" alt="Citadine 3">
-<<<<<<< HEAD
-=======
-                    <img src="citadine3.jpg" alt="Citadine 3">
-
->>>>>>> 7b209621bcdb78a0f9ec17c31dc7651290e98779
-                    <h3>Audi RS6</h3>
+                    <img src="../image/aaurus.png" alt="Citadine 3">
+                    <h3>Lamborghini Urus S</h3>
                     <p>Prix: 450€/mois</p>
