--- a/html/leasing.html
+++ b/html/leasing.html
@@ -176,7 +176,34 @@
             <a href="#" class="close">Fermer</a>
         </div>
     </div>
-
+    <footer>
+        <div class="footer-content">
+          <div class="footer-logo">
+            <img src="../image/IIM.png" alt="Logo IconicMotors" class="footer-logo-image">
+            <p>IconicMotors</p>
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="../html/leasing.html">Leasing</a></li>
+              <li><a href="../html/location.html">Location</a></li>
+              <li><a href="../html/histoire.html">Histoire</a></li>
+              <li><a href="../html/connexion.html">Connexion</a></li>
+            </ul>
+          </div>
+          <div class="footer-contact">
+            <p>Contactez-nous :</p>
+            <p>Email : <a href="IconicMotors@IM.fr">contact@iconicmotors.com</a></p>
+            <p>Téléphone : <a href="tel:+33123456789">+33 1 23 45 67 89</a></p>
+            <a href="html/contact.html">CONTACT IM</a>
+    
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2024 IconicMotors. Tous droits réservés.</p>
+          <p><a href="html/mentions-legales.html">Mentions légales</a> | <a
+              href="html/politique-confidentialite.html">Politique de confidentialité</a></p>
+        </div>
+      </footer>
 
 </body>
 </html>
