--- a/html/souscription.html
+++ b/html/souscription.html
@@ -129,6 +129,8 @@
             <p>Contactez-nous :</p>
             <p>Email : <a href="IconicMotors@IM.fr">contact@iconicmotors.com</a></p>
             <p>Téléphone : <a href="tel:+33123456789">+33 1 23 45 67 89</a></p>
+            <a href="html/contact.html">CONTACT IM</a>
+
           </div>
         </div>
         <div class="footer-bottom">
