--- a/html/location.html
+++ b/html/location.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IconicMotors - Location</title>
     <link rel="stylesheet" href="../style/location.css">
-    <link rel="icon" href="../image/IConiMotors (2).png">
+    <link rel="icon" href="../image/IConiMotors.png">
 </head>
 
 
